--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 ###> symfony/framework-bundle ###
-/.idea
+/.idea/*
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -14,11 +14,6 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-
-###> phpunit/phpunit ###
-/phpunit.xml
-.phpunit.result.cache
-###< phpunit/phpunit ###
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
