--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,7 +3,7 @@ security:
     enable_authenticator_manager: true
     password_hashers:
         App\Entity\User:
-            algorithm: bcrypt
+            algorithm: 'bcrypt'
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
