--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,7 +11,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: id
+                property: nick
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
