--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "postinstall": "npm run prod"
     },
     "dependencies": {
         "axios": "^0.21.1"
