--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "symfony/web-link": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
-        "stof/doctrine-extensions-bundle": "v1.6.0",
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
