--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "front",
     "devDependencies": {
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
