--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress",
-        "postinstall": "npm run prod"
+        "postinstall": "npm run build"
     },
     "dependencies": {
         "axios": "^0.21.1"
