--- a/.woodpecker/backend.yml
+++ b/.woodpecker/backend.yml
@@ -2,8 +2,6 @@ when:
   event: manual
   branch: master
 
-depends_on: ['setup']
-
 steps:
   backend:
     image: php:8.1
@@ -16,3 +14,6 @@ steps:
       - composer config --no-plugins allow-plugins true
       - composer install --no-dev --optimize-autoloader --ignore-platform-req=*
       - composer dump-env prod
+
+depends_on:
+  - setup
