--- a/.woodpecker/setup.yml
+++ b/.woodpecker/setup.yml
@@ -2,8 +2,6 @@ when:
   event: manual
   branch: master
 
-depends_on: [ 'clone' ]
-
 steps:
   setup:
     image: alpine
@@ -12,3 +10,6 @@ steps:
         from_secret: ENV_VARS
     commands:
       - echo "$ENV_VARS" > .env.prod
+
+depends_on:
+  - clone
