Add test woodpecker pipeline

--- a/.woodpecker/rsync.yml
+++ b/.woodpecker/rsync.yml
@@ -7,6 +7,11 @@ depends_on:
   - front
   - backend
 
+matrix:
+  WEB:
+    - "deploy-target"
+    - "deploy-target-2"
+
 steps:
   rsync:
     image: alpine
@@ -19,4 +24,4 @@ steps:
       - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
       - chmod 600 ~/.ssh/id_rsa
       - echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
-      - rsync -avz --exclude-from="$CI_WORKSPACE/.woodpecker/rsync-ignore" -e "ssh -i ~/.ssh/id_rsa" "$CI_WORKSPACE/" azaw@172.26.214.158:/home/azaw/projects/deploy-target/
+      - rsync -avz --exclude-from="$CI_WORKSPACE/.woodpecker/rsync-ignore" -e "ssh -i ~/.ssh/id_rsa" "$CI_WORKSPACE/" azaw@172.26.214.158:/home/azaw/projects/${WEB}/
