--- a/.env
+++ b/.env
@@ -14,8 +14,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=7ec9c7808ab1ed94c55ad333a53cad2b
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
