Add test woodpecker pipeline

--- a/.woodpecker/build.yml
+++ b/.woodpecker/build.yml
@@ -2,6 +2,11 @@ when:
   event: manual
   branch: master
 
+matrix:
+  SERVER:
+    - azaw@172.26.214.158:/home/azaw/projects/deploy-target/
+    - azaw@172.26.214.158:/home/azaw/projects/deploy-target-2/
+
 steps:
   setup:
     image: alpine
@@ -10,7 +15,7 @@ steps:
         from_secret: ENV_VARS
     commands:
       - echo "$ENV_VARS" > .env.prod
-      - touch "build-$(date +%Y%m%d%H%M%S)"
+      - touch "build-$(date +%s)"
 
   front:
     image: node:14
@@ -31,3 +36,16 @@ steps:
       - composer config --no-plugins allow-plugins true
       - composer install --no-dev --optimize-autoloader --ignore-platform-req=*
       - composer dump-env prod
+
+  rsync:
+    image: alpine
+    environment:
+      SSH_PRIVATE_KEY:
+        from_secret: SSH_PRIVATE_KEY
+    commands:
+      - apk add --no-cache openssh-client rsync
+      - mkdir -p ~/.ssh
+      - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+      - chmod 600 ~/.ssh/id_rsa
+      - echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+      - rsync -avz --exclude-from="$CI_WORKSPACE/.woodpecker/rsync-ignore" -e "ssh -i ~/.ssh/id_rsa" "$CI_WORKSPACE/" ${SERVER}
