--- a/.woodpecker/build.yml
+++ b/.woodpecker/build.yml
@@ -39,6 +39,9 @@ steps:
 
   rsync:
     image: alpine
+    depends_on:
+      - backend
+      - front
     environment:
       SSH_PRIVATE_KEY:
         from_secret: SSH_PRIVATE_KEY
