--- a/.woodpecker/build.yml
+++ b/.woodpecker/build.yml
@@ -2,11 +2,6 @@ when:
   event: manual
   branch: master
 
-matrix:
-  SERVER:
-    - azaw@172.26.214.158:/home/azaw/projects/deploy-target/
-    - azaw@172.26.214.158:/home/azaw/projects/deploy-target-2/
-
 steps:
   setup:
     image: alpine
@@ -37,18 +32,9 @@ steps:
       - composer install --no-dev --optimize-autoloader --ignore-platform-req=*
       - composer dump-env prod
 
-  rsync:
+  pack:
     image: alpine
-    depends_on:
-      - backend
-      - front
-    environment:
-      SSH_PRIVATE_KEY:
-        from_secret: SSH_PRIVATE_KEY
     commands:
-      - apk add --no-cache openssh-client rsync
-      - mkdir -p ~/.ssh
-      - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-      - chmod 600 ~/.ssh/id_rsa
-      - echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
-      - rsync -avz --exclude-from="$CI_WORKSPACE/.woodpecker/rsync-ignore" -e "ssh -i ~/.ssh/id_rsa" "$CI_WORKSPACE/" ${SERVER}
+      - tar czf artifacts.tar.gz $CI_WORKSPACE
+    artifacts:
+      - artifacts.tar.gz
