Add test woodpecker pipeline

--- a/.woodpecker/build.yml
+++ b/.woodpecker/build.yml
@@ -33,6 +33,9 @@ steps:
       - composer dump-env prod
 
   pack:
+    depends_on:
+      - backend
+      - front
     image: alpine
     commands:
       - tar czf artifacts.tar.gz $CI_WORKSPACE
