--- a/.woodpecker/rsync.yml
+++ b/.woodpecker/rsync.yml
@@ -15,7 +15,7 @@ steps:
   download:
     image: alpine
     commands:
-      - wget https://woodpecker.example.com/api/repos/<owner>/<repo>/builds/<build_number>/artifacts/build-artifacts.tar.gz
+      - scp azaw@172.26.214.158:/home/azaw/projects/deploy-upload/artifacts.tar.gz .
       - tar xzf artifacts.tar.gz
 
   rsync:
