--- a/.woodpecker/rsync.yml
+++ b/.woodpecker/rsync.yml
@@ -20,6 +20,8 @@ steps:
 
   rsync:
     image: alpine
+    depends_on:
+      - download
     environment:
       SSH_PRIVATE_KEY:
         from_secret: SSH_PRIVATE_KEY
