Add test woodpecker pipeline

--- a/.woodpecker/rsync.yml
+++ b/.woodpecker/rsync.yml
@@ -25,4 +25,4 @@ steps:
       - echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
       - scp azaw@172.26.214.158:/home/azaw/projects/deploy-upload/_current.tar.gz .
       - tar xzf _current.tar.gz
-      - rsync -avz --exclude-from="$CI_WORKSPACE/.woodpecker/rsync-ignore" -e "ssh -i ~/.ssh/id_rsa" "$CI_WORKSPACE/" ${SERVER}
+      - ls -lta
