--- a/.woodpecker/rsync.yml
+++ b/.woodpecker/rsync.yml
@@ -24,5 +24,5 @@ steps:
       - chmod 600 ~/.ssh/id_rsa
       - echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
       - scp azaw@172.26.214.158:/home/azaw/projects/deploy-upload/_current.tar.gz .
-      - tar xzf _current.tar.gz
+      - tar xzf _current.tar.gz -C .
       - ls -lta
