Add test woodpecker pipeline

--- a/.woodpecker/rsync.yml
+++ b/.woodpecker/rsync.yml
@@ -24,9 +24,10 @@ steps:
       - chmod 600 ~/.ssh/id_rsa
       - echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
       - scp azaw@172.26.214.158:/home/azaw/projects/deploy-upload/_current.tar.gz .
-      - tar xzf _current.tar.gz -C .
+      - tar tzf _current.tar.gz
+      - tar xzf _current.tar.gz -C "$CI_WORKSPACE"
       - ls -lta
-      - pwd
-      - ls "$CI_WORKSPACE"
+      - ls -lh _current.tar.gz
+      - file _current.tar.gz
 #      - rsync -avz --exclude-from="$CI_WORKSPACE/.woodpecker/rsync-ignore" -e "ssh -i ~/.ssh/id_rsa" "$CI_WORKSPACE/" ${SERVER}
 
