--- a/.woodpecker/rsync.yml
+++ b/.woodpecker/rsync.yml
@@ -17,13 +17,17 @@ steps:
     environment:
       SSH_PRIVATE_KEY:
         from_secret: SSH_PRIVATE_KEY
+      ARTIFACTS_REPOSITORY:
+        from_secret: ARTIFACTS_REPOSITORY
+      CURRENT_BUILD_NAME:
+        from_secret: CURRENT_BUILD_NAME
     commands:
       - apk add --no-cache openssh-client rsync
       - mkdir -p ~/.ssh
       - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
       - chmod 600 ~/.ssh/id_rsa
       - echo -e "Host *\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
-      - scp azaw@172.26.214.158:/home/azaw/projects/deploy-upload/_current.tar.gz .
-      - tar xzf _current.tar.gz
+      - scp "$ARTIFACTS_REPOSITORY/$CURRENT_BUILD_NAME" .
+      - tar xzf "$CURRENT_BUILD_NAME"
       - rsync -avz --exclude-from="$CI_WORKSPACE/.woodpecker/rsync-ignore" -e "ssh -i ~/.ssh/id_rsa" "$CI_WORKSPACE/" ${SERVER}
 
